tests/fixtures/invalid/max_str_bool.py
# Cannot call max() with Str, Bool
x = max("hello", True)
